# 5D-Digital-Data-Storage

./: .bandit  .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  pyvenv.cfg  requirements-dev.txt  tox.ini
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release-on-tag.yml
docs/: SECURITY_PRACTICES.md
examples/: host_writer_demo.py  simulate_storage.py
scripts/: audit_security.sh  run_security_checks.sh
src/host_writer/: __init__.py  __main__.py  orchestrator.py
src/optical_storage/: __init__.py  bit_utils.py  error_correction.py  noise.py  reader.py  security.py  storage_pattern.py  voxel.py  writer.py
src/optical_storage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_additional.py  test_ecc_example.py  test_hamming_deterministic.py  test_host_writer_smoke.py  test_roundtrip.py  test_storage_pattern_io.py
