[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "5d-optical-data-storage"
version = "0.1.0"
description = "Simulation platform for 5D femtosecond-laser data storage"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "5D Storage Contributors" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://example.com/5d-digital-data-storage"

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
host-writer = "host_writer.__main__:main"
